fixed background to stretch

--- a/templates/bootstrap/css/style.css
+++ b/templates/bootstrap/css/style.css
@@ -1,9 +1,7 @@
 body {
     background-image: url("bkgd.jpg");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-}
-color: white;
+    background-size: cover;
+    color: white;
 }
  #authors {
      color: white;
